force-app/main/default/objects/System_Module__c/System_Module__c.object-meta.xml
<CustomObject>
    <description>Each record documents the evolving architecture, infrastructure and behavior of a module of the system implemented by this Salesforce database.</description>
    <label>System Module</label>
    <nameField>
        <label>System Module Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Modules</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>