force-app/main/default/objects/System_Module__c/fields/Apex_classes__c.field-meta.xml
<CustomField>
    <fullName>Apex_classes__c</fullName>
    <description>The apex classes that contribute to the behavior of this module</description>
    <inlineHelpText>The apex classes that contribute to the behavior of this module</inlineHelpText>
    <label>Apex classes</label>
    <length>13000</length>
    <type>LongTextArea</type>
</CustomField>