force-app/main/default/objects/System_Module__c/fields/Aura_components__c.field-meta.xml
<CustomField>
    <fullName>Aura_components__c</fullName>
    <description>The aura (lightning) components that contribute to the behavior of this module</description>
    <inlineHelpText>The aura (lightning) components that contribute to the behavior of this module</inlineHelpText>
    <label>Aura components</label>
    <type>TextArea</type>
</CustomField>