force-app/main/default/objects/System_Module__c/fields/Flows__c.field-meta.xml
<CustomField>
    <fullName>Flows__c</fullName>
    <description>The flows that contribute to the behavior of this module</description>
    <inlineHelpText>The flows that contribute to the behavior of this module</inlineHelpText>
    <label>Flows</label>
    <type>TextArea</type>
</CustomField>