force-app/main/default/objects/System_Module__c/fields/Objects_primary__c.field-meta.xml
<CustomField>
    <fullName>Objects_primary__c</fullName>
    <description>The objects that are integral to the architecture and behavior of this module</description>
    <inlineHelpText>The objects that are integral to the architecture and behavior of this module</inlineHelpText>
    <label>Objects: primary</label>
    <type>TextArea</type>
</CustomField>