force-app/main/default/objects/System_Module__c/fields/Objects_secondary__c.field-meta.xml
<CustomField>
    <fullName>Objects_secondary__c</fullName>
    <description>The objects that are secondary to the architecture and behavior of this module</description>
    <inlineHelpText>The objects that are secondary to the architecture and behavior of this module</inlineHelpText>
    <label>Objects: secondary</label>
    <type>TextArea</type>
</CustomField>