force-app/main/default/objects/System_Module__c/fields/Overview_architecture__c.field-meta.xml
<CustomField>
    <fullName>Overview_architecture__c</fullName>
    <description>Description of the architecture of this module, including the relations between objects</description>
    <inlineHelpText>Description of the architecture of this module, including the relations between objects</inlineHelpText>
    <label>Overview: architecture</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>