force-app/main/default/objects/System_Module__c/fields/Overview_processing__c.field-meta.xml
<CustomField>
    <fullName>Overview_processing__c</fullName>
    <description>Description of the processing of this module, including the various apex classes, flows, workflows, processes, and lightning components</description>
    <inlineHelpText>Description of the processing of this module, including the various apex classes, flows, workflows, processes, and lightning components</inlineHelpText>
    <label>Overview: processing</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>