force-app/main/default/objects/System_Module__c/fields/Processes__c.field-meta.xml
<CustomField>
    <fullName>Processes__c</fullName>
    <description>The (process builder) processes that contribute to the behavior of this module</description>
    <inlineHelpText>The (process builder) processes that contribute to the behavior of this module</inlineHelpText>
    <label>Processes</label>
    <type>TextArea</type>
</CustomField>