force-app/main/default/objects/System_Module__c/fields/VF_pages__c.field-meta.xml
<CustomField>
    <fullName>VF_pages__c</fullName>
    <description>The Visualforce pages that contribute to the behavior of this module</description>
    <inlineHelpText>The Visualforce pages that contribute to the behavior of this module</inlineHelpText>
    <label>VF pages</label>
    <type>TextArea</type>
</CustomField>