force-app/main/default/objects/System_Module__c/fields/Workflows__c.field-meta.xml
<CustomField>
    <fullName>Workflows__c</fullName>
    <description>The workflows that contribute to the behavior of this module</description>
    <inlineHelpText>The workflows that contribute to the behavior of this module</inlineHelpText>
    <label>Workflows</label>
    <length>31000</length>
    <type>LongTextArea</type>
</CustomField>