force-app/main/default/objects/System_Module__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Objects_primary__c</columns>
    <columns>Objects_secondary__c</columns>
    <columns>Apex_classes__c</columns>
    <columns>Aura_components__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>